# snake

./: .gitignore  CMakeLists.txt  README.md
docs/: devlog.md  improvement_ideas.md
lib/SDL/: libSDL2-2.0.so.0  libSDL2_image-2.0.so.0.800.2
scripts/: init_linux.sh  install_development_tools.ps1  obtain_dependency.sh
scripts/linux/: init.sh  obtain_dependency.sh
scripts/windows/: init.ps1  obtain_dependency.ps1
src/: main.cpp
src/engine/: activatable.cpp  activatable.h  app.cpp  app.h  app_configuration.h  app_event.h  component_added.h  component_destroyed.h  display.cpp  display.h  entity.cpp  entity.h  entity_created.h  entity_destroyed.h  entity_name_collision.cpp  entity_name_collision.h  entity_parent_changed.h  game_time.cpp  game_time.h  gameplay_engine.cpp  gameplay_engine.h  input.cpp  input.h  life_state.h  object_initializer.cpp  object_initializer.h  scene.cpp  scene.h  scene_destroyed.h  scene_loader.cpp  scene_loader.h  scene_traversal.cpp  scene_traversal.h  subsystem_initialization_failed.cpp  subsystem_initialization_failed.h  time_point.cpp  time_point.h  vector2.cpp  vector2.h
src/engine/collision/: box_collider.cpp  box_collider.h  box_collider_renderer.cpp  box_collider_renderer.h  collision.h  collision_engine.cpp  collision_engine.h  collision_handler.h
src/engine/component/: behavior.cpp  behavior.h  component.cpp  component.h  component_not_found.cpp  component_not_found.h  initializable.h  material.h  renderer.cpp  renderer.h  startable.h  transform.cpp  transform.h  transformation.cpp  transformation.h  updatable.cpp  updatable.h
src/engine/logging/: logger.cpp  logger.h
src/engine/messaging/: messenger.cpp  messenger.h  recipient.h
src/engine/rendering/: image_renderer.cpp  image_renderer.h  material.h  renderer.cpp  renderer.h  rendering_engine.cpp  rendering_engine.h
src/engine/time/: game_time.cpp  game_time.h  time_point.cpp  time_point.h
src/game/: bouncing_collision_handler.cpp  bouncing_collision_handler.h  color.h  entity_name.h  entity_names.h  execution_priority.h  fatal_collision_handler.cpp  fatal_collision_handler.h  game_coordinator.cpp  game_coordinator.h  game_ending_renderer.cpp  game_ending_renderer.h  game_event.h  game_start_requirement.h  main.cpp  pause_screen.cpp  pause_screen.h  render_layer.h  snake_app.cpp  snake_app.h  tag.h  tile_maze.cpp  tile_maze.h
src/game/ability/: ability.cpp  ability.h  ability_expired.h  ability_indicator.cpp  ability_indicator.h  ability_indicator_renderer.cpp  ability_indicator_renderer.h  ability_slot.cpp  ability_slot.h  ability_usage_changed.h  inverted_snake_controller.cpp  inverted_snake_controller.h  slow_down.cpp  slow_down.h  speed_boost.cpp  speed_boost.h  wall_bouncing.cpp  wall_bouncing.h
src/game/assets/: asset_path.h  asset_paths.h
src/game/food/: food.cpp  food.h  food_factory.h  food_renderer.cpp  food_renderer.h  food_spawner.cpp  food_spawner.h  magic_food.h  magic_food_factory.cpp  magic_food_factory.h  normal_food_factory.cpp  normal_food_factory.h  reverter_food.cpp  reverter_food.h
src/game/gameplay/snake/: movement_system.cpp  movement_system.h  snake.cpp  snake.h  tiled_movement_system.cpp  tiled_movement_system.h
src/game/scene/: classic_scene.cpp  classic_scene.h  game_ending_scene.cpp  game_ending_scene.h  magic_food_scene.cpp  magic_food_scene.h  main_scene.cpp  main_scene.h  pause_scene.cpp  pause_scene.h  scene_navigator.cpp  scene_navigator.h  test_scene.cpp  test_scene.h
src/game/snake/: movement_system.cpp  movement_system.h  snake.cpp  snake.h  snake_controller.cpp  snake_controller.h  snake_renderer.cpp  snake_renderer.h  tiled_movement_system.cpp  tiled_movement_system.h
src/game/special_ability/: snake_special_ability.cpp  snake_special_ability.h  special_ability_slot.cpp  special_ability_slot.h
src/game/terrain/: tile_renderer.cpp  tile_renderer.h
src/game/tile_maze/: tile_maze.cpp  tile_maze.h  tile_maze_renderer.cpp  tile_maze_renderer.h  tile_position.cpp  tile_position.h
src/game/ui/: border.cpp  border.h  border_renderer.cpp  border_renderer.h
src/game/ui/screen/: game_ending_screen.cpp  game_ending_screen.h  main_screen.cpp  main_screen.h  menu_screen.cpp  menu_screen.h  pause_screen.cpp  pause_screen.h  screen_configuration.h
src/game/wall/: wall.cpp  wall.h  wall_renderer.cpp  wall_renderer.h
src/game_engine/: activatable.cpp  activatable.h  app.cpp  app.h  component_added.h  component_destroyed.h  entity.cpp  entity.h  entity_created.h  entity_destroyed.h  entity_parent_changed.h  game_object.cpp  game_object.h  game_object_created.h  game_object_destroy_requested.h  game_object_destroyed.h  game_object_parent_changed.h  game_time.cpp  game_time.h  input.cpp  input.h  life_state.h  scene.cpp  scene.h  scene_traversal.cpp  scene_traversal.h  subsystem_initialization_failed.cpp  subsystem_initialization_failed.h  time.cpp  time.h  vector2.cpp  vector2.h
src/game_engine/collision/: box_collider.cpp  box_collider.h  box_collider_renderer.cpp  box_collider_renderer.h  collision.h  collision_engine.cpp  collision_engine.h  collision_handler.h
src/game_engine/component/: behavior.cpp  behavior.h  collision.h  collision_handler.h  component.cpp  component.h  component_not_found.cpp  component_not_found.h  material.cpp  material.h  renderer.cpp  renderer.h  updatable.h
src/game_engine/gameplay/: activatable.h  behavior.cpp  behavior.h  component.h  component_not_found.h  game_object.cpp  game_object.h  game_object.hpp  updatable.h
src/game_engine/logging/: console_logger.cpp  console_logger.h  logger.cpp  logger.h
src/game_engine/messaging/: messenger.cpp  messenger.h  recipient.h
